--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.4
+  flutter_native_splash: ^2.4.4
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -115,3 +116,8 @@ flutter_icons:
   macos:
     generate: true
     image_path: "assets/4Habits-Logo.png"
+
+flutter_native_splash:
+  color: "#ff9400"
+  android_12:
+    color: "#ff9400"
