--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   http: ^0.13.4
   flutter_native_splash: ^2.4.4
   permission_handler: ^10.2.0
+  flutter_heatmap_calendar: ^1.0.5
+  simple_heatmap_calendar: ^0.4.0
 
 
 
